--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "iron-image": "PolymerElements/iron-image#^2.0.0",
     "paper-icon-button": "PolymerElements/paper-icon-button#^2.0.0",
     "paper-spinner": "PolymerElements/paper-spinner#^2.0.0",
-    "polymer": "Polymer/polymer#^2.0.0"
+    "polymer": "Polymer/polymer#^2.0.0",
+    "hk-panoram-image-viewer": "kirill-zuborev/hk-panoram-image-viewer#0.0.1"
   },
   "devDependencies": {
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
